--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -26,4 +26,4 @@ jobs:
         uses: azure/setup-kubectl@v3
 
       - name: Rolling update
-        run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }}
+        run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }} -n application
