--- a/.github/workflows/arc-actions.yml
+++ b/.github/workflows/arc-actions.yml
@@ -20,10 +20,13 @@ jobs:
 
       - name: Extract version variable
         run: |
-          echo "APP_VERSION=$(./gradlew :LiveFeedBatch:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
+          echo "BATCH_APP_VERSION=$(./gradlew :LiveFeedBatch:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
+          echo "SERVICE_APP_VERSION=$(./gradlew :LiveFeedService:properties -q | grep version | awk -F ' ' '{ print $2 }')" >> $GITHUB_ENV
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
 
       - name: Rolling update
-        run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }} -n application
+        run: |
+          kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.BATCH_APP_VERSION }} -n application
+          kubectl set image deployment/service-app service-app=ghcr.io/live-feed/live-feed-service:${{ env.SERVICE_APP_VERSION }} -n application
