--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -5,38 +5,41 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: LiveFeedBatch Module CI
+name: LiveFeedBatch Module CI/CD
 
 on:
-  pull_request:
-    types: [opened, reopened, closed]
+  push:
     branches:
-      - 'main'
-#  push:
-    paths:
-      - 'LiveFeedBatch/**'
+      - 'LF-57/cd-arc'
+#  pull_request:
+#    types: [opened, reopened, closed]
+#    branches:
+#      - 'main'
+##  push:
+#    paths:
+#      - 'LiveFeedBatch/**'
 
 jobs:
-  test:
-    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-    runs-on: ubuntu-latest
-    environment: batch
-
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3.5.2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.11.0
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Gradle Test
-        run: ./gradlew :LiveFeedBatch:test
+#  test:
+#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+#    runs-on: ubuntu-latest
+#    environment: batch
+#
+#    steps:
+#      - name: Checkout branch
+#        uses: actions/checkout@v3.5.2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3.11.0
+#        with:
+#          distribution: 'zulu'
+#          java-version: '17'
+#
+#      - name: Gradle Test
+#        run: ./gradlew :LiveFeedBatch:test
 
   build:
-    if: github.event.pull_request.merged == true
+#    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: batch
 
@@ -89,3 +92,14 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           platforms: |
             linux/arm64
+
+  deploy:
+    needs: build
+    runs-on: arc-runner-set
+
+    steps:
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Rolling update
+        run: kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ env.APP_VERSION }} -n application
