--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -9,36 +9,38 @@ name: LiveFeedService Module CI
 
 on:
   push:
-    paths:
-      - 'LiveFeedService/**'
-  pull_request:
-    types: [opened, reopened, closed]
     branches:
-      - 'main'
-    paths:
-      - 'LiveFeedService/**'
+      - 'LF-57/cd-arc'
+#    paths:
+#      - 'LiveFeedService/**'
+#  pull_request:
+#    types: [opened, reopened, closed]
+#    branches:
+#      - 'main'
+#    paths:
+#      - 'LiveFeedService/**'
 
 jobs:
-  test:
-    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-    runs-on: ubuntu-latest
-    environment: service
-
-    steps:
-      - name: Checkout branch
-        uses: actions/checkout@v3.5.2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.11.0
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Gradle Test
-        run: ./gradlew :LiveFeedService:test
+#  test:
+#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+#    runs-on: ubuntu-latest
+#    environment: service
+#
+#    steps:
+#      - name: Checkout branch
+#        uses: actions/checkout@v3.5.2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3.11.0
+#        with:
+#          distribution: 'zulu'
+#          java-version: '17'
+#
+#      - name: Gradle Test
+#        run: ./gradlew :LiveFeedService:test
 
   build:
-    if: github.event.pull_request.merged == true
+#    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: service
 
@@ -92,3 +94,14 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
+
+  deploy:
+    needs: build
+    runs-on: arc-runner-set
+
+    steps:
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Rolling update
+        run: kubectl set image deployment/service-app service-app=ghcr.io/live-feed/live-feed-service:${{ env.APP_VERSION }} -n application
