--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -5,42 +5,40 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: LiveFeedService Module CI
+name: LiveFeedService Module CI/CD
 
 on:
   push:
+    paths:
+      - 'LiveFeedService/**'
+  pull_request:
+    types: [opened, reopened, closed]
     branches:
-      - 'LF-57/cd-arc'
-#    paths:
-#      - 'LiveFeedService/**'
-#  pull_request:
-#    types: [opened, reopened, closed]
-#    branches:
-#      - 'main'
-#    paths:
-#      - 'LiveFeedService/**'
+      - 'main'
+    paths:
+      - 'LiveFeedService/**'
 
 jobs:
-#  test:
-#    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
-#    runs-on: ubuntu-latest
-#    environment: service
-#
-#    steps:
-#      - name: Checkout branch
-#        uses: actions/checkout@v3.5.2
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3.11.0
-#        with:
-#          distribution: 'zulu'
-#          java-version: '17'
-#
-#      - name: Gradle Test
-#        run: ./gradlew :LiveFeedService:test
+  test:
+    if: ${{ github.event.action == 'opened' || github.event.action == 'reopened' }}
+    runs-on: ubuntu-latest
+    environment: service
+
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Gradle Test
+        run: ./gradlew :LiveFeedService:test
 
   build:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     environment: service
 
