--- a/.github/workflows/batch-actions.yml
+++ b/.github/workflows/batch-actions.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: LiveFeedBatch Module CI
+name: LiveFeedBatch Module CI/CD
 
 on:
   pull_request:
@@ -89,3 +89,17 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           platforms: |
             linux/arm64
+    outputs:
+      APP_VERSION: ${{ env.APP_VERSION }}
+
+  deploy:
+    needs: build
+    runs-on: arc-runner-set
+
+    steps:
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Rolling update
+        run: |
+          kubectl set image cronjob/batch-cron-job batch-container=ghcr.io/live-feed/live-feed-batch:${{ needs.build.outputs.APP_VERSION }} -n application
