--- a/.github/workflows/service-actions.yml
+++ b/.github/workflows/service-actions.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: LiveFeedService Module CI
+name: LiveFeedService Module CI/CD
 
 on:
   push:
@@ -92,3 +92,16 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
+    outputs:
+      APP_VERSION: ${{ env.APP_VERSION }}
+
+  deploy:
+    needs: build
+    runs-on: arc-runner-set
+
+    steps:
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Rolling update
+        run: kubectl set image deployment/service-app service-app=ghcr.io/live-feed/live-feed-service:${{ needs.build.outputs.APP_VERSION }} -n application
