[LF-59/connection-pool] 각 모듈별 connection-pool 개수 조정
- service 모듈에서 elasticsearchRepository에서 rdb 관련 repository를 찾지 않도록 설정 변경

--- a/LiveFeedBatch/src/main/resources/application-prod.yaml
+++ b/LiveFeedBatch/src/main/resources/application-prod.yaml
@@ -8,12 +8,16 @@ spring:
       username: ${APP_DATABASE_USER}
       password: ${APP_DATABASE_PASSWORD}
       driver-class-name: oracle.jdbc.OracleDriver
+      configuration:
+        maximum-pool-size: ${APP_DATABASE_MAXIMUM_POOL_SIZE}
 
     batch:
       url: ${BATCH_DATABASE_URL}
       username: ${BATCH_DATABASE_USER}
       password: ${BATCH_DATABASE_PASSWORD}
       driver-class-name: oracle.jdbc.OracleDriver
+      configuration:
+        maximum-pool-size: ${BATCH_DATABASE_MAXIMUM_POOL_SIZE}
 
   data:
     redis:
