--- a/LiveFeedService/src/main/resources/application-prod.yaml
+++ b/LiveFeedService/src/main/resources/application-prod.yaml
@@ -7,6 +7,8 @@ spring:
     username: ${APP_DATABASE_USER}
     password: ${APP_DATABASE_PASSWORD}
     driver-class-name: oracle.jdbc.OracleDriver
+    hikari:
+      maximum-pool-size: ${APP_DATABASE_MAXIMUM_POOL_SIZE}
 
   jpa:
     hibernate:
