--- a/LiveFeedService/build.gradle
+++ b/LiveFeedService/build.gradle
@@ -7,11 +7,12 @@ configurations {
     asciidoctorExt
 }
 
-version = '0.2.3'
+version = '0.2.4'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
