[LF-65/batch-redis-pub] batch 이후 redis publish 구현 완료

--- a/LiveFeedBatch/src/main/resources/application-prod.yaml
+++ b/LiveFeedBatch/src/main/resources/application-prod.yaml
@@ -19,6 +19,9 @@ spring:
       configuration:
         maximum-pool-size: ${BATCH_DATABASE_MAXIMUM_POOL_SIZE}
 
+  redis-pub-sub:
+    channel: ${REDIS_PUB_SUB_CHANNEL}
+
   data:
     redis:
       repositories:
