--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,8 @@ services:
     restart: always
 
   oracledb:
-    image: oracle/database:19.3.0-ee
+#    image: oracle/database:19.3.0-ee
+    image: ghcr.io/live-feed/live-feed-oracledb:dev
     container_name: oracledb
     ports:
       - "1521:1521"
